# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import jdRouter from "./jd";
 import interviewsRouter from "./interviews";
 import usersRouter from "./users";
 import adminRouter from "./admin";
+import facilityRouter from "./facility";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(jdRouter);
 router.use(interviewsRouter);
 router.use(usersRouter);
 router.use(adminRouter);
+router.use(facilityRouter);
 
 export default router;
